# mml2vgm

./: .gitignore  COMPILER_FIX_SUMMARY.md  DEBUG_vgmData.txt  Justfile  README.md  package-lock.json
.playwright-mcp/: page-2026-05-05T03-40-19-258Z.yml  page-2026-05-05T03-44-56-629Z.yml  page-2026-05-05T03-45-19-252Z.yml  page-2026-05-05T03-45-30-333Z.yml  page-2026-05-05T03-48-44-342Z.yml
Formula/: mml2vgm-rs.rb
browser-ide/: .gitignore  cloudflare-pages.toml  index.html  package-lock.json  package.json  playwright.config.ts  test-wasm.html  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.tsconfig.json  wrangler.toml
cfg/: sf2.cfg
docs/: Browser_IDE_Implementation.md  Browser_IDE_Limitations.md  Browser_IDE_Plan.md  Cloudflare_Pages_Deployment.md  Console_Chips_Design.md  Development.md  Directory_Restructure_Plan.md  Example_Tracks_Plan.md  External_Driver_Support.md  FOUND_ROMS_ANALYSIS.md  Found_ROMs_Status.md  Furnace_Instruments.mml  Furnace_VRC6_Support.md  GOLDEN_MASTER_TEST_PLAN.md  Golden_Master_Comparison_Plan.md  IDE.md  Instrument_Editor_Plan.md  LINUX_CLI_COMPLETION.md  Live_NoteOn_NoteOff_Plan.md  Live_Note_Highlighting_Plan.md  MIDI_Export_Plan.md  MML_Commands.md  Menu_Bar_Implementation_Plan.md  OPL3_Patch_Pack.mml  PC98_EMULATOR_SETUP.md  PERFORMANCE_FIXES.md  PHASE1_COMPLETION_STATUS.md  PHASE1_PROGRESS.md  PHASE1_SESSION_COMPLETE.md  PHASE2_AUDIO_FRAMEWORK_COMPLETE.md  PHASE2_AUDIO_VALIDATION_PLAN.md  PHASE2_COMPILATION_RESULTS.md  PHASE2_COMPILER_FIXES_REPORT.md  PHASE2_COMPLETE.md  PHASE2_ENHANCED_SESSION_SUMMARY.md  PHASE2_PROGRESS.md  PHASE2_SESSION_SUMMARY.md  PHASES_14-15_COMPLETION_REPORT.md  PHASES_9-12_SUMMARY.md  PHASE_12_WAVEFORM_EDITING.md  (+35 more)
egui-app/: Cargo.toml
egui-app/src/: app.rs  audio.rs  compiler.rs  document.rs  editor.rs  highlight.rs  live_audio.rs  main.rs  midi.rs  settings.rs  socket.rs
egui-app/src/panels/: arpeggio_editor.rs  compile_options.rs  envelope_editor.rs  error_list.rs  fm_tone_editor.rs  midi_keyboard.rs  mod.rs  playback.rs  sample_editor.rs  settings_panel.rs  waveform.rs
egui-app/tests/: smoke.rs
egui-app/tests/fixtures/: valid.gwi
examples/: c140-namco.gwi  fm_chord.gwi  fm_commands.gwi  hello.gwi  huc6280-pcengine.gwi  k053260-konami.gwi  k054539-konami.gwi  loop_arp.gwi  midi_basic.gwi  midi_control_change.gwi  midi_drums.gwi  midi_pitch_bend.gwi  pokey-atari.gwi  psg_commands.gwi  psg_melody.gwi  qsound-capcom.gwi  scc-msx.gwi  segapcm-genesis.gwi  vrc6-nes.gwi
mml2vgm-rs/: Cargo.toml  INSTALL.md  README.md  build.rs
mml2vgm-rs/benches/: compilation_benchmark.rs
mml2vgm-rs/completions/: _mml2vgm-rs  mml2vgm-rs.bash
mml2vgm-rs/docs/: USAGE.md  mml2vgm-rs.1
mml2vgm-rs/examples/: debug_tokens.rs
mml2vgm-rs/src/: error.rs  ffi.rs  instrument_serializer.rs  lib.rs  live_player.rs  main.rs
mml2vgm-rs/src/audio/: backend.rs  cpal.rs  mod.rs  rodio.rs  sdl2.rs
mml2vgm-rs/src/chips/: ay8910.rs  c140.rs  c352.rs  dmg.rs  huc6280.rs  k051649.rs  k053260.rs  k054539.rs  mod.rs  nes_apu.rs  pokey.rs  qsound.rs  rf5c164.rs  segapcm.rs  sn76489.rs  vrc6.rs  y8950.rs  ym2151.rs  ym2203.rs  ym2413.rs  ym2608.rs  ym2612.rs  ym3526.rs  ym3812.rs  ymf262.rs  ymf271.rs
mml2vgm-rs/src/compiler/: ast.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  sample_resolver.rs  sema.rs
mml2vgm-rs/src/compiler/codegen/: midi.rs  midi_controller.rs  mod.rs  vgm.rs  xgm.rs  zgm.rs
mml2vgm-rs/src/compiler/tests/: compiler_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs
mml2vgm-rs/src/drivers/: driver_tests.rs  mod.rs
mml2vgm-rs/src/drivers/m98/: mod.rs
mml2vgm-rs/src/drivers/moondriver/: mod.rs
mml2vgm-rs/src/drivers/muap/: mod.rs
mml2vgm-rs/src/drivers/mucom/: mod.rs
mml2vgm-rs/src/drivers/pmd/: mod.rs
mml2vgm-rs/src/player/: chip_player.rs  mod.rs  vgm_player.rs
mml2vgm-rs/src/utils/: logging.rs  mod.rs  pcm.rs  wav.rs
mml2vgm-rs/tests/: binary_header_smoke.rs  chip_audio_fingerprint.rs  chip_audio_invariants.rs  cli_end_to_end.rs  compile_examples.rs  compile_mml2vgm_test.rs  compiler_codegen_tests.rs  driver_compile_fixtures.rs  parser_regression.rs  parser_stress.rs  performance_profile.rs  vgm_codegen_accuracy.rs  vgm_player_smoke.rs
mml2vgm-rs/tests/util/: audio_fingerprint.rs
mml2vgm-wasm/: Cargo.toml  README.md  test.html
mml2vgm-wasm/src/: lib.rs
mml2vgmTest/: midi_basic.gwi  midi_bend.gwi  midi_cc.gwi  midi_drums.gwi  midi_pc.gwi
scripts/: compare_vgm.mjs  compare_wav.mjs  convert_demos_to_mml.py  convert_fur_to_mml.py  convert_sitaraba.mjs  detect_silence.mjs  fui2mml.py  smoke-test.mjs
tauri-app/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  setup.sh  tauri.conf.json  tsconfig.json  vite.config.ts
tauri-app/icons/: .gitkeep
tauri-app/src/: main.tsx
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
validation_results/: COMPLETE_VALIDATION_REPORT.md  PHASE1_COMPLETE.md  PHASE1_TO_PHASE2_TRANSITION.md  PHASE1_VALIDATION_REPORT.md  PHASE1_VGM_VALIDATION_COMPLETE.md  SPECTRAL_ANALYSIS_PLAN.md  VALIDATION_REPORT_TEMPLATE.md  golden_master_results.json  nes_pulse_mml2vgm.vgm  phase1_results.json  render_results.json  test_nes_noise.vgm  test_nes_pulse.vgm  test_nes_triangle.vgm  test_opl2_basic.vgm  test_opl3_4op.vgm  (+18 more)
(+920 files in other folders)
