[package]
name = "egui-app"
version = "0.1.0"
edition = "2021"
description = "mml2vgm native desktop IDE (egui)"
license = "GPL-3.0"

[[bin]]
name = "egui-app"
path = "src/main.rs"

[dependencies]
mml2vgm = { path = "../mml2vgm-rs", package = "mml2vgm-rs" }

eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

rfd = "0.14"

serde = { version = "1", features = ["derive"] }
toml = "0.8"

log = "0.4"
env_logger = "0.11"
dirs-next = "2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
